[gd_scene load_steps=3 format=3 uid="uid://dpgsdmoi1xbwx"]

[ext_resource type="Script" path="res://scenes/ui/draggable_object.gd" id="1_vhryr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cjj4i"]
size = Vector2(146, 76)

[node name="DraggableObject" type="Area2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_vhryr")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(165, 9.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cjj4i")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
